@@ -9,7 +9,20 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.pcdd.javase</groupId>
     <artifactId>experimental</artifactId>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
